Revision history for Net-ISC-DHCPd

0.07
       - Add (RT58391) OMAPI lookup by hardware_address, even though
         it does not appear to described in the dhcpd manual (?)
         Contributor: Jeff Bair

0.06     Thu Jun 17 20:23:51 CEST 2010
       - Fix version number (didn't know _ made it a dev release)
       - Fix _DEBUG is default off (0)
       - Change OMAPI::Meta::Class is renamed to OMAPI::Sugar
       - Add (RT58391) t/20-omapi.t test which proves (?!) that state() is
         ignored by omapi/omshell.

0.05_02  Fri May 28 23:40:21 CEST 2010
       - Fix RT57947: Minor improvement for Net::ISC::DHCPd::OMAPI:
         "key" not required for localhost
         Contributor: Patrick

0.05_01  Sat Apr 24 16:52:43 CEST 2010
       - Fix RT56775: 10-leases-parse.t fails in non-UTC timezones
         Contributor: Alexey Illarionov

0.05     Mon Dec  7 21:16:00 2009 +0100
       - Add OMAPI write() and remove()

0.04     Wed Sep 23 01:06:58 2009 +0200
       - Add Supports ArrayRef[HashRef], when setting attributes
       - Change depth attribute is not in use, so therefore lazy

0.03     Tue Juli 21 15:41:01 CET 2009
       - Fix RT49694: Problem in generate when in a host section a
         "filename "pxelinux.0";" entry exists
         Contributor: Nito Martinez
       - Add types for coercion support
       - Can talk with the DHCP server, using omshell
        + stop remote server
        + read leases
        - write leases (should work)
        + read host
        - write hosts (should work)
        - read/write groups (should work)

0.02     Tue Juli 21 15:41:01 CET 2009
       - Add parse leases
       - Add test leases and config file

0.01     Sun May 17 23:45:00 CET 2009
       - Add parsing of config works
       - Add generating config works
